styles/styles.css
:root {
  --bright-blue: #00ABE4;
  --white: #FFFFFF;
  --light-blue: #E9F1FA;
  --black: #1e375a;
}

html {
  scroll-behavior: smooth;
}

@font-face {
  font-family: oswald;
  src: url(../fonts/Oswald-VariableFont_wght.ttf);
}

@font-face {
  font-family: Montserrat;
  src: url(../fonts/Montserrat-VariableFont_wght.ttf);
}

@font-face {
  font-family: pacifico;
  src: url(../fonts/Pacifico-Regular.ttf);
}

body {
  height: 300vh;
  display: grid;
  grid-template-rows: 1fr 1fr 1fr;
  background-color: var(--light-blue);
  font-family: Montserrat, oswald, 'Times New Roman', Times, serif;
}

/* Scroll Button */

.scroll-btn {
  position: absolute;
  left: 50vw;
  background: none;
	color: inherit;
	border: none;
	padding: 0;
	font: inherit;
	cursor: pointer;
	outline: inherit;
  width: 50px;
  color: var(--black);
}

#scroll-btn-1 {
  bottom: 60px;  
}

#scroll-btn-2 {
  bottom: calc(-100vh + 60px);
  color: var(--white);
}

.scroll-btn:hover {
  color: var(--bright-blue);
  transform: scale(1.5);
}



 /* Main Container */
.container {
  flex: 1;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

/* Info section */

.info {
  height: 600px;
  display: grid;
  grid-template-rows: 1fr 2fr 1fr;
  color: var(--black);
}

.info > .name {
  justify-self: center;
  align-self: center;
  font-size: 60pt;
  font-weight: 800;
  grid-row-start: 2;
}

.info > .bio {
  font-size: 20pt;
  grid-row-start: 3;
  display: grid;
  grid-template-rows: 1fr 1fr;
}

.bio > .message {
  display: flex;
  justify-content: center;
  align-items: center;
}

.bio > .list {
 display: flex;
 flex-wrap: wrap;
}

.list-group {
  display: flex;
  justify-content: space-around;
  flex: 1;
}
 
/* These are the images listed in my experience */

.list-group *  {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 90px;
  max-width: auto;
}

.break  {
  flex-basis: 100%;
  height: 0;
}

/* Profile Picture */

.profile-picture {
  height: 600px;
  width: 600px;
  border-radius: 50%;
  background-image: url(../images/axel-2.JPG);
  background-position: left 48% bottom 50%;
}

/* Page Two */

#second-page {
  background-image: url(../images/mountains.png);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: left 50% bottom 50%;
  display: grid;
  grid-template-rows: repeat(2, 1fr);
  grid-template-columns: repeat(2, 1fr);
}

.about-me {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-left: 30px;
  justify-content: center;
  color: var(--black);
  gap: 10px;
}

.title {
  justify-self: center;
  align-self: center;
  font-size: 60pt;
  font-weight: 800;
  grid-row-start: 2;
}

.biography {
  display: flex;
  flex-direction: column;
  gap: 15px;
  font-size: 18pt;
}


/* Page 3 */

#third-page {
  height: 100vh;
  max-height: 100vh;
  display: grid;
  grid-template-rows: 1fr 5fr;
}

.portfolio-title {
  font-size: 4rem;
  color: var(--black);
  display: flex;
  justify-content: center;
  align-items: center;
}

.portfolio-grid-container {
  display: flex;
  justify-content: center;
}

.portfolio-grid {
  width: 60%;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(3, 25vh);
  gap: 15px;
}

.card {
  outline: 3px solid var(--black);
  background-color: var(--white);
  border-radius: 10px;
  display: flex;
  flex-direction: column;
}

.card-main {
  flex: 1;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 42pt;
  font-family: 'pacifico';
  color: var(--black);
}
.card-bottom {
  height: 20px;
  background-color: var(--bright-blue);
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
}

#twitter {
  grid-area: 1 / 1 / 3 / 1;
}

#chess {
  grid-area: 3 / 1 / 3 / 2;
}


#facebook {
  grid-area: 2 / 3 / 4 / 3;
}

#weather {
  grid-area: 1 / 2 / 2 / 4;
}

#shopping {
  grid-area: 2 / 2 / 4 / 2;
}


/* footer */

footer {
  height: 50px;
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  background-color: var(--bright-blue);
  box-shadow: 0px -5px 5px #FAF9F6;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
}

footer > .socials {
  grid-column-start: 3;
  display: flex;
  gap: 30px;
  align-items: center;
  justify-content: flex-end;
  padding-right: 25px;
  color: var(--white);
}

.socials * {
  color: white;
  font-size: 20pt;
  height: 40px;
}

